# proy_Domosync

./: DFT.c  README.md  analog_circ.docx  base_de_datos.c  base_de_datos.h  block_diagrams.docx  componentes_precio.xlsx  cronograma_tareas.xlsx  domosync_presentation.pptx  flow_diagrams.docx  measure.c  measurelibs.c  measurelibs.h  ~$alog_circ.docx  ~$cronograma_tareas.xlsx
FirstPicoCode/: CMakeLists.txt  base_de_datos.c  base_de_datos.h  config_pwm.c  config_pwm.h  configpwm.c  configpwm.h  digiElements.c  digiElements.h  digi_elements.c  measure.c  measure_libs.c  measure_libs.h  measurelibs.c  measurelibs.h  sens.c  sens.h
LCD/: CMakeLists.txt  access_sys.c  gpio_led.h
ProbeModule/: CMakeLists.txt  measure.c
Reading_LDR_DIGITAL/: CMakeLists.txt  main.c
SecondPicoCode/: CMakeLists.txt  access_sys.c  main_pico.c
SecondPicoCode_Labview/: CMakeLists.txt  Functions.c  Functions.h  LCD_i2c.c  LCD_i2c.h  Read_PICO.vi  access_sys.c  access_system.c  access_system.h  base_de_datos.c  base_de_datos.h  gpio_led.h  main_pico.c
Servo/: CMakeLists.txt  main.c  main.h
sensTemp/: CMakeLists.txt  control_PI_fan.c
sens_temp/: CMakeLists.txt  control_PI_fan.c
